--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-social-icons": "^5.15.0",
     "react-toastify": "^9.1.1",
     "sass": "^1.56.1",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
