--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "comma-number": "^2.1.0",
     "daisyui": "^2.38.1",
     "firebase": "^9.13.0",
     "framer-motion": "^7.6.5",
+    "millify": "^5.0.1",
     "react": "^18.2.0",
     "react-animation-particles": "^1.0.4",
     "react-dom": "^18.2.0",
